--- a/ai/index.html
+++ b/ai/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - AI king</title>
+  <title>AI工具王</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -309,7 +309,9 @@
       <li>3</li>
       <li>4</li>
       <li>5</li>
-      <li><i class="ri-arrow-right-s-line"></i></li>
+      <li class="material-symbols-outlined">
+          chevron_right
+        </li>
     </ul>
 </div>
 
